k8s_manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  ports:
    - port: 5000
  selector:
    app: demo
